Attemps to fix mobile overflow carousel

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,4 +55,6 @@ body.needsScroll{
 } */
 canvas{
   margin: 0 auto;
+  overflow-y: hidden;
+  position: fixed;
 }
